# PExplore

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: app.h  disassembler.h  dll_loader.h  pe_parser.h  pseudo_code_gen.h
src/: app.cpp  disassembler.cpp  dll_loader.cpp  main.cpp  pe_parser.cpp  pseudo_code_gen.cpp
test/: test_pe_parser.cpp
